--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
+<!--
+ .d8b.   .o88b. d888888b db    db d8b   db d88888b db   d8b   db .d8888.
+d8' `8b d8P  Y8 `~~88~~' 88    88 888o  88 88'     88   I8I   88 88'  YP
+88ooo88 8P         88    88    88 88V8o 88 88ooooo 88   I8I   88 `8bo.
+88~~~88 8b         88    88    88 88 V8o88 88~~~~~ Y8   I8I   88   `Y8b.
+88   88 Y8b  d8    88    88b  d88 88  V888 88.     `8b d8'8b d8' db   8D
+YP   YP  `Y88P'    YP    ~Y8888P' VP   V8P Y88888P  `8b8' `8d8'  `8888Y'
+-->
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+              crossorigin="anonymous">
+    {% endblock %}
+</head>
+<body>
+{% block body %}{% endblock %}
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+{% endblock %}
+</body>
 </html>
