--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,24 +7,22 @@ d8' `8b d8P  Y8 `~~88~~' 88    88 888o  88 88'     88   I8I   88 88'  YP
 88   88 Y8b  d8    88    88b  d88 88  V888 88.     `8b d8'8b d8' db   8D
 YP   YP  `Y88P'    YP    ~Y8888P' VP   V8P Y88888P  `8b8' `8d8'  `8888Y'
 -->
-<html>
+<html class="no-js" lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-    {% block stylesheets %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-              crossorigin="anonymous">
-    {% endblock %}
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{% block meta_description '' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <title>
+        {% block title %}
+            {% block page_title 'Accueil' %} | Actunews
+        {% endblock %}
+    </title>
+    {% block stylesheets %}{% endblock %}
 </head>
 <body>
 {% block body %}{% endblock %}
-{% block javascripts %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-{% endblock %}
+{% block javascripts %}{% endblock %}
 </body>
 </html>
