--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -1,7 +1,170 @@
-{% extends "base.html.twig" %}
+{% extends "layout.html.twig" %}
 
-{% block title %}Accueil{% endblock %}
+{% block page_title %}Accueil{% endblock %}
 
-{% block body %}
-    <h1>La page d'accueil !</h1>
+{% block content %}
+    <!-- minimal-post-area -->
+    <section class="minimal__post-area pt-80 pb-80">
+        <div class="container">
+            <div class="minimal__post-wrapper">
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post01.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post02.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post03.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post04.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post05.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post06.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post07.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post08.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+                <div class="minimal__post-item grid-item">
+                    <div class="minimal__post-thumb tgImage__hover">
+                        <div class="minimal__post-tags">
+                            <a href="#">nature</a>
+                            <a href="#">tech</a>
+                        </div>
+                        <a href="blog-details.html"><img src="{{ asset('assets/img/minimal/minimal_post09.jpg') }}" alt="img"></a>
+                    </div>
+                    <div class="minimal__post-content">
+                        <ul class="tgbanner__content-meta list-wrap">
+                            <li><span class="by">By</span> <a href="blog.html">miranda h.</a></li>
+                            <li>nov 21, 2022</li>
+                        </ul>
+                        <h4 class="title tgcommon__hover"><a href="blog-details.html">Why we need guidelines for brain
+                                scan data to real data.</a></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="minimal__post-more text-center">
+                <a href="#" id="loadMore" class="btn"><span class="text">Load More</span> <i class="far fa-plus"></i></a>
+            </div>
+        </div>
+    </section>
+    <!-- minimal-post-area-end -->
 {% endblock %}
