Découverte des formulaires

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -58,6 +58,7 @@
 
     <!-- main-area -->
     <main>
+        {% include 'components/_flash.html.twig' %}
         {% block content %}{% endblock %}
     </main>
     <!-- main-area-end -->
